# cs-timespan

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.claude/skills/work-issue/: SKILL.md
.github/scripts/: drift_check.py  drift_ignore.md
.github/workflows/: bench.yml  ci.yml  drift-check.yml
benches/: format.rs  format_gungraun.rs  parse.rs  parse_gungraun.rs
src/: fmt.rs  lib.rs  parse.rs
tests/: arithmetic.rs  components.rs  conversions.rs  format.rs  from_float.rs  from_integer.rs  parse.rs  parse_exact.rs  total_properties.rs
