[package]
name = "cs-timespan"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[features]
default = []
chrono = ["dep:chrono"]

[dependencies]
num-format = "0.4"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "format"
harness = false
