[package]
name = "cs-timespan"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[features]
default = []
chrono = ["dep:chrono"]

[dependencies]
num-format = "0.4"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.8"
gungraun = "0.19.3"

[lints.clippy]
pedantic = "warn"

[[bench]]
name = "format"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "parse_gungraun"
harness = false

[[bench]]
name = "format_gungraun"
harness = false
